# DI_refinery_pipeline_project

./: .gitignore  DOMAIN_NOTES.md  Dockerfile  README.md  pyproject.toml  run_pipeline.py  streamlit_rag_app.py
.refinery/: extraction_ledger.jsonl
.refinery/chunks/: 2013-E.C-Audit-finding-information.json  20191010_Pharmaceutical-Manufacturing-Opportunites-in-Ethiopia_VF_part1.json  20191010_Pharmaceutical-Manufacturing-Opportunites-in-Ethiopia_VF_part2.json  Annual_Report_JUNE-2022_part1.json  Annual_Report_JUNE-2022_part2.json  Annual_Report_JUNE-2022_part3.json  Consumer Price Index July 2025.json  Security_Vulnerability_Disclosure_Standard_Procedure_1_part1.json  Security_Vulnerability_Disclosure_Standard_Procedure_1_part2.json  Security_Vulnerability_Disclosure_Standard_Procedure_1_part3.json  tax_expenditure_ethiopia_2021_22.json
.refinery/facts/: 20191010_Pharmaceutical-Manufacturing-Opportunites-in-Ethiopia_VF.db  20191010_Pharmaceutical-Manufacturing-Opportunites-in-Ethiopia_VF_part1.db  20191010_Pharmaceutical-Manufacturing-Opportunites-in-Ethiopia_VF_part2.db  Annual_Report_JUNE-2022_part1.db  Annual_Report_JUNE-2022_part2.db  Annual_Report_JUNE-2022_part3.db  Consumer Price Index July 2025.db  Security_Vulnerability_Disclosure_Standard_Procedure_1_part1.db  tax_expenditure_ethiopia_2021_22.db  (+2 more)
rubric/: extraction_rules.yaml
tests/: test_chunking_engine.py  test_extraction_router.py  test_fasttext_extractor.py  test_layout_extractor.py  test_pageindex_builder.py  test_pipeline_integration.py  test_query_agent.py  test_triage.py  test_vision_extractor.py
(+92 files in other folders)
