[project]
name = "refinery_pipeline_project"
version = "0.1.0"
description = "PDF processing pipeline"
requires-python = ">=3.10"
dependencies = [
    "langdetect>=1.0.9",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "pytesseract>=0.3.13",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
]
[tool.pytest.ini_options]
pythonpath = ["src"]
