[project]
name = "refinery_pipeline_project"
version = "0.1.0"
description = "PDF processing pipeline"
requires-python = ">=3.10"
dependencies = [
    "fastembed>=0.2.7",
    "gradio",
    "langdetect>=1.0.9",
    "langgraph>=1.0.10",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "pdfreader",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "pypdf",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "streamlit",
    "tqdm>=4.67.3",
]
[tool.pytest.ini_options]
pythonpath = ["src"]
